[package]
authors = ["Jorge Aparicio <jorge@japaric.io>"]
categories = ["embedded", "hardware-support", "no-std"]
description = "HAL for the STM32F401xE family of microcontrollers"
keywords = ["arm", "cortex-m", "stm32", "hal"]
license = "MIT OR Apache-2.0"
name = "stm32f401xe-hal"
repository = "https://github.com/ryochack/stm32f401xe-hal"
version = "0.1.2"

[dependencies]
cortex-m = "0.4.0"
embedded-hal = "0.1.0"
nb = "0.1.0"
stm32f401xe = { git = "https://github.com/ryochack/stm32f401xe" }

[dependencies.cast]
default-features = false
version = "0.2.2"

# [features]
# rt = ["stm32f30x/rt"]
